tests/miz/pass/clusters/pass_clusters_chain_two_steps_001.miz
registration
  cluster empty -> finite for set;
  cluster finite -> enumerable for set;
end;
