tests/miz/fail/clusters/fail_clusters_self_cycle_001.miz
registration
  cluster finite -> finite for set;
end;
